k8s/scorer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scorer
  namespace: dev
spec:
  type: NodePort
  selector:
    app: scorer
  ports:
    - port: 8501
      targetPort: 8501
      nodePort: 30001
