k8s/scorer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scorer-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: scorer.czaban.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scorer
                port:
                  number: 8501
