k8s/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-except-http
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8501
  egress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - ports:
        - protocol: TCP
          port: 443
